--- a/estilo/style.css
+++ b/estilo/style.css
@@ -22,11 +22,18 @@ header {
     align-items: center;
     gap: 180px;
     background-color: #101612;
+    margin-bottom: 50;} 
 
-.banner {margin-top: 40px;}
-
-}
-
+.banner {
+    text-align: center;
+    margin-left: 10%;
+    margin-right:10%;
+    margin-top: 90px;
+    height: 500px;
+background-color: #FFFFFF;
+color: #22BF52;
+font-size: 84px;
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;}
 
 nav > h1 {font-size: 48px;
           color: #22BF52
@@ -42,7 +49,6 @@ nav > h1 {font-size: 48px;
 .navegacao > a:hover {
     color: #22BF52;
 }
-
 
 article {
 
